# accounting

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: main.yml
college_accounting/: __init__.py  _core.py  example98.py  main.py  t_account.py  utility_functions.py
college_accounting/application/: application.py  cli_app.py
college_accounting/archive/: _core.py  t_account.py
college_accounting/domain/: __init__.py  account.py  entry.py  journal.py  transaction.py
college_accounting/infrastructure/sqlite/: _core.py  account_sqlite_repo.py  entry_sqlite_repo.py  sqlite_repository.py  transaction_sqlite_repo.py
college_accounting/repositories/: account_repository.py  entry_repository.py  transaction_repository.py
college_accounting/repository/: account_repository.py  journal_repository.py  transaction_repository.py
tests/: test_account.py  test_spreadsheet.py
