[project]
name = "college_accounting"
version = "0.1.0"
description = "A simple accounting system with dunder addition support"
authors = [
    { name="Andy Tunison", email="andrew.e.tunison@gmail.com" }
]
dependencies = []

[tool.black]
line-length = 120
target-version = ['py310']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = ["E", "F", "W", "C90", "B", "I", "PL"]
lint.ignore = ["F403", "PLR2004", "I001"]
exclude = ["build", "dist", ".venv"]

[tool.bandit]
skips = ["B101"]  # Optional: skip assert usage warnings
exclude = ["tests"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch = true
source = ["."]
